--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -21,10 +21,20 @@ jobs:
         id: check_changes
         run: |
           git fetch origin main
+          if [ $(git rev-parse --is-inside-work-tree 2>/dev/null) ]; then
+          if [ $(git rev-parse HEAD^ 2>/dev/null) ]; then
           if git diff --name-only HEAD^ HEAD | grep -qv README.md; then
-            echo "true" > needs_update
+          echo "true" > needs_update
           else
-            echo "false" > needs_update
+          echo "false" > needs_update
+          fi
+          else
+          echo "No previous commit found."
+          echo "false" > needs_update
+          fi
+          else
+          echo "No commits in the repository."
+          echo "false" > needs_update
           fi
 
       - name: Run tree and update README if necessary
