--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -21,19 +21,16 @@ jobs:
         id: check_changes
         run: |
           git fetch origin main
-          if [ $(git rev-parse --is-inside-work-tree 2>/dev/null) ]; then
-          if [ $(git rev-parse HEAD^ 2>/dev/null) ]; then
-          if git diff --name-only HEAD^ HEAD | grep -qv README.md; then
+
+          # Check if there are at least two commits
+          if [ $(git rev-list --count HEAD) -ge 2 ]; then
+          if git diff --name-only HEAD~1 HEAD | grep -qv README.md; then
           echo "true" > needs_update
           else
           echo "false" > needs_update
           fi
           else
-          echo "No previous commit found."
-          echo "false" > needs_update
-          fi
-          else
-          echo "No commits in the repository."
+          echo "Not enough commits to compare."
           echo "false" > needs_update
           fi
 
